# zq2

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .solhint.json  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  benches.patch  config-example.toml  config-single-node.toml  config-single.toml  config.toml  deny.toml  docker-compose-networking-test.yaml  docker-compose.yaml  foundry.toml  logs  package-lock.json  package.json  remappings.txt  requirements.txt  rust-toolchain.toml  rustfmt.toml  start_node.sh  start_zq2.sh  stop_zq2.sh  zq2-devnet.toml  zq2-devnet.yaml  zq2-infratest.yaml  zq2-mainnet.yaml  zq2-mr-prototestnet.yaml  zq2-perftest.yaml  zq2-persistence.yaml  zq2-protodevnet.yaml  zq2-protoinfradevnet.yaml  (+6 more)
deploy/: Cargo.toml  devnet.toml
deploy/src/: main.rs
deployer/: Cargo.toml  README.md  build.rs
deployer/src/: commands.rs  main.rs  utils.rs
deployer/src/zq1/: db.rs  mod.rs  persistence.rs  proto.rs
eth-trie.rs/: Cargo.toml  README.md
eth-trie.rs/benches/: insert_benchmark.rs  trie.rs
eth-trie.rs/src/: db.rs  errors.rs  lib.rs  nibbles.rs  node.rs  trie.rs
eth-trie.rs/src/tests/: mod.rs
evm-ds/: Cargo.toml  build.rs
evm-ds/src/: continuations.rs  convert.rs  cps_executor.rs  evm_server_run.rs  lib.rs  main.rs  pretty_printer.rs  scillabackend.rs  tracing_logging.rs
evm-ds/src/api/: mod.rs
evm-ds/src/precompiles/: blake2.rs  ec.rs  ecrecover.rs  identity.rs  mod.rs  modexp.rs  ripemd160.rs  scilla_call.rs  scilla_common.rs  scilla_read.rs  sha2_256.rs
evm-ds/src/protos/: Evm.rs  ScillaMessage.rs  evm_proto.rs  mod.rs
scilla/: Cargo.toml  README.md  build.rs
scilla/src/: ScillaMessage.proto  backend_collector.rs  call_scilla_server.rs  lib.rs  proto.rs  scilla_server_run.rs  scilla_tcp_server.rs  types.rs
uccb/: Cargo.toml
uccb/contracts/: compiled.json  foundry.toml  package.json
uccb/contracts/script/: deploy.s.sol  register.s.sol  relay.s.sol
uccb/contracts/src/: ValidatorManager.sol
uccb/contracts/test/: Target.sol
uccb/src/: cfg.rs  client.rs  lib.rs
z2/: Cargo.toml  README.md  update-chain-specs.sh
z2/docs/: README.md  converter.md  deployer.md  deposit.md  join.md  local-network.md  staking.md  testing.md  uccb.md
z2/resources/: api.tera.md  api_macros.tera.md  api_notes.tera.md  checkpoints.tera.sh  config.tera.toml  join.sh.tpl  mimir-config.yaml  noapi.tera.md  node_provision.tera.py  otel-compose.yaml  persistence_backup.tera.py  persistence_export.tera.sh  rpc_rates.toml  start_node.tera.sh  start_validator.tera.sh  supported_apis.tera.md  test_env.tera.sh  zurl
z2/resources/chain-specs/: README.md  prototestnet.toml  zq2-devnet.toml  zq2-infratest.toml  zq2-lukasz.toml  zq2-mainnet.toml  zq2-mr-prototestnet.toml  zq2-perftest.toml  zq2-persistence.toml  zq2-protodevnet.toml  zq2-protoinfradevnet.toml  zq2-protomainnet.toml  zq2-prototestnet.toml  zq2-richard.toml  zq2-testnet.toml  zq2-uccbtest.toml
z2/runtime/: start_otterscan.sh
z2/src/: address.rs  chain.rs  collector.rs  components.rs  converter.rs  deployer.rs  docgen.rs  docs.rs  github.rs  init_chain.rs  kms.rs  kpi.rs  lib.rs  mitmweb.rs  node.rs  node_spec.rs  otel.rs  otterscan.rs  perf.rs  plumbing.rs  runner.rs  scilla.rs  secret.rs  setup.rs  spout.rs  testing.rs  utils.rs  validators.rs  zq2.rs
z2/src/chain/: config.rs  instance.rs  node.rs
z2/src/kpi/: account.rs  config.rs  read.rs  read_latency.rs  txn.rs  txn_latency.rs
z2/src/perf_mod/: async_transfer.rs  conform.rs  mod.rs
z2/src/zq1/: db.rs  mod.rs  persistence.rs  proto.rs
zilliqa/: Cargo.toml  build.rs  out.txt
zilliqa/benches/: ERC20.sol  giant.scilla  it.rs
zilliqa/src/: aux.rs  block_store.rs  blockhooks.rs  blockstore.rs  build.rs  cfg.rs  checkpoint.rs  consensus.rs  constants.rs  convenience_functions.rs  crypto.rs  data_access.rs  db.rs  director.rs  eip1967-calls.md  error.rs  eth_helpers.rs  evm.rs  evm_backend.rs  exec.rs  exec_failure.rs  gas.rs  health.rs  inspector.rs  lib.rs  main.rs  message.rs  networking.rs  node.rs  node_launcher.rs  p2p_node.rs  persist_peers.rs  pool.rs  precompiles.rs  protocol.rs  range_map.rs  ratelimit.rs  rewards.rs  schnorr.rs  scilla.rs  (+11 more)
zilliqa/src/api/: admin.rs  bundler.rs  debug.rs  erigon.rs  eth.rs  implementation.rs  mod.rs  net.rs  others.rs  ots.rs  ots_calls.rs  subscription_id_provider.rs  to_hex.rs  trace.rs  txpool.rs  types.rs  uccb.rs  web3.rs  zil.rs  zilliqa.rs
zilliqa/src/contracts/: CallMe.sol  README.md  call_me.json  compiled.json  deposit.sol  deposit_v1.sol  deposit_v2.sol  deposit_v3.sol  deposit_v4.sol  deposit_v5.sol  deposit_v6.sol  deposit_v7.sol  deposit_v8.sol  foundry.toml  gas_price.json  gas_price.sol  hash_to_curve.sol  intershard_bridge.sol  mod.rs  native_token.json  native_token.sol  native_token_2.json  shard.json  shard.sol  shard_contract.sol  shard_pointer.json  shard_pointer.sol  shard_registry.json  shard_registry.sol  shard_registry_contract.sol  staking_pool.sol  wtf.json
zilliqa/src/credits/: mod.rs  rpc_credit_limit.rs  rpc_credit_rate.rs  rpc_credit_store.rs  rpc_extension_layer.rs  rpc_price_list.rs  rpc_pricing.toml  rpc_rate_limit.rs
zilliqa/src/db/: migrate.rs  mod.rs  tables.rs
zilliqa/src/jsonrpc/: mod.rs  rpc_credit_list.rs  rpc_credit_store.rs  rpc_extension_layer.rs  rpc_price_list.rs  rpc_rate_limit.rs
zilliqa/src/precompiles/: bls_verify.rs  erc20.rs  mod.rs  penalty.rs  pop_verify.rs  scilla.rs  scilla_read.rs
zilliqa/src/uccb/: ARCHITECTURE.md  HOWTO.md  architecture.md  bridge_node.rs  bundler.rs  cfg.rs  client.rs  contracts.rs  crypto.rs  event.rs  external_network.rs  launcher.rs  message.rs  mod.rs  node.rs  provider.rs  relayer.rs  scan.rs  signature.rs  signatures.rs  signer.rs  uccb.rs  utils.rs  validator_node.rs  watcher.rs
zilliqa/src/zq1/: persistence.rs
zilliqa/tests/: consensus-tests.rs  consensus_tests.rs
zilliqa/tests/it/: admin.rs  consensus.rs  debug.rs  eth.rs  main.rs  native_contracts.rs  ots.rs  pectra.rs  penalty.rs  persistence.rs  rewards.rs  staking.rs  sync.rs  (+10 more)
(+635 files in other folders)
