[workspace]

members = [
 "zilliqa",
 "zilliqa-macros",
 "z2",
 "evm-ds",
 "eth-trie.rs"
]

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true
lto = "thin"

[profile.release-stripped]
inherits = "release"
strip = true
