[workspace]
resolver = "2"

members = [
    "deployer",
    "eth-trie.rs",
    "zilliqa",
    "zilliqa-macros",
    "z2",
]

[workspace.package]
version = "0.1.0"
authors = ["Zilliqa <zilliqatech@zilliqa.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
# Add debug information to the release build (does NOT reduce the level of optimization!)
# Makes flamegraphs more readable.
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-profile-sections
debug = true
lto = "thin"

[profile.release-stripped]
inherits = "release"
strip = true
