[package]
name = "deploy"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
clap = { version = "4.4.18", features = ["derive"] }
google-compute1 = "5.0.3"
google-storage1 = "5.0.3"
primitive-types = { version = "0.12.2", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros"] }
toml = "0.8.8"
