[package]
name = "deployer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name="zutils"
path="src/lib.rs"
test=false

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
base64 = "0.22.0"
bitvec = "1.0.1"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
eth_trie = { version = "0.1.0", path = "../eth-trie.rs" }
ethabi = "18.0.0"
ethereum = "0.15.0"
git2 = "0.18.1"
hex = "0.4.3"
home = "0.5.9"
indicatif = "0.17.8"
itertools = "0.12.1"
k256 = "0.13.3"
libc = "0.2.153"
log = "0.4.21"
primitive-types = "0.12.2"
prost = "0.12.3"
revm = "8.0.0"
rlp = "0.5.2"
rs-leveldb = "0.1.5"
rustc-hex = "2.1.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.113"
sha2 = "0.10.8"
sha3 = "0.10.8"
tempfile = "3.9.0"
tokio = { version = "1.32.0", features = ["full"] }
thiserror = "1.0.57"
toml = "0.8.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
zilliqa = { path = "../zilliqa" }

[build-dependencies]
prost-build = "0.12.3"
