[package]
name = "deployer"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name="zutils"
path="src/lib.rs"
test=false

[dependencies]
anyhow = { version = "1.0.79", features = ["backtrace"] }
base64 = "0.22.0"
clap = { version = "4.4.18", features = ["derive"] }
colored = "2.1.0"
git2 = "0.18.1"
home = "0.5.9"
libc = "0.2.153"
log = "0.4.21"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.113"
tempfile = "3.9.0"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.8"
