[package]
name = "eth_trie"
version.workspace = true
authors = ["Jason Carver <ut96caarrs@snkmail.com>", "Zilliqa <zilliqatech@zilliqa.com>"]
description = "Ethereum-compatible Merkle-Patricia Trie."
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
keywords = ["patricia", "mpt", "evm", "trie", "ethereum"]

[dependencies]
alloy = { version = "0.4.2", default-features = false, features = ["rlp"] }
hashbrown = "0.14.5"
log = "0.4.22"
parking_lot = "0.12.3"
rlp = "0.6.1"

[dev-dependencies]
alloy = { version = "0.4.2", default-features = false, features = ["getrandom"] }
rand = "0.8.5"
hex = "0.4.3"
criterion = "0.5.1"
uuid = { version = "1.9.0", features = ["serde", "v4"] }

[[bench]]
name = "trie"
harness = false
