[package]
name = "evm_ds"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
base64 = "0.21.2"
byteorder = "1.4.3"
bytes = "1.4.0"
ethabi = "18.0.0"
ethereum = "0.14.0"
evm = { git = "https://github.com/Zilliqa/evm", rev = "ef7a9d1476f15660aad98dec5275beae016e83e4", features = ["tracing"] }
ethers = "2.0.8"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
num-bigint = "0.4.3"
num-integer = "0.1.45"
primitive-types = { version = "0.12.1", features = ["serde"] }
protobuf = { version = "2.27.1",  features = ["with-bytes"] }
ripemd = "0.1.3"
serde = "1.0.183"
serde_json = "1.0.104"
sha2 = "0.10.7"
sha3 = "0.10.8"
substrate-bn = "0.6.0"
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"

[build-dependencies]
protoc-rust = "2.28.0"
