[package]
name = "evm_ds"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.21.5"
byteorder = "1.5.0"
bytes = "1.5.0"
derivative = "2.2.0"
ethabi = "18.0.0"
ethereum = { version = "0.14.0", features = ["with-serde"] }
evm = { git = "https://github.com/Zilliqa/evm", rev = "08a117eadfd0368cd2cc813763155e8f740bd881", features = ["tracing"] }
ethers = "2.0.10"
hex = "0.4.3"
libsecp256k1 = "0.7.1"
num-bigint = "0.4.4"
num-integer = "0.1.45"
primitive-types = { version = "0.12.2", features = ["serde"] }
protobuf = { version = "3.3.0",  features = ["with-bytes"] }
ripemd = "0.1.3"
serde = "1.0.193"
serde_json = "1.0.109"
sha2 = "0.10.8"
sha3 = "0.10.8"
substrate-bn = "0.6.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = "0.1.40"

[build-dependencies]
protoc-rust = "2.28.0"
