[package]
name = "scilla"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.78"
base64 = "0.21.5"
evm = { git = "https://github.com/Zilliqa/evm", rev = "08a117eadfd0368cd2cc813763155e8f740bd881", features = ["tracing"] }
evm_ds = { path = "../evm-ds" }
jsonrpc-core = "18.0.0"
primitive-types = "0.12.2"
prost = "0.12.3"
serde = "1.0.193"
serde_json = "1.0.108"
sha2 = "0.10.8"
sha3 = "0.10.8"
tracing = "0.1.40"
