[package]
name = "uccb"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[lib]
name = "uccb"
path = "src/lib.rs"

[[bin]]
name = "validator-oracle"
path = "src/bin/validator-oracle.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2.0", default-features = false, features = ["consensus", "contract", "dyn-abi", "eips", "json-abi", "k256", "network", "providers", "provider-ws", "pubsub", "rlp", "rpc-types", "rpc-types-trace", "serde", "signers", "signer-local", "sol-types"] }
anyhow = "1.0.86"
async-trait = "0.1.81"
bls-signatures = "0.15.0"
clap = {version = "4.5.11", features = ["derive"]}
futures = "0.3.30"
futures-util = "0.3"
hex = "0.4.3"
itertools = "0.13.0"
primitive-types = "0.12.2"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.121"
thiserror = "1.0.63"
tokio = {version = "1.39.2", features = ["macros", "rt-multi-thread", "sync", "io-std", "io-util", "process", "fs"]}
tokio-stream = "0.1.15"
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.2"
zilliqa = {path = "../zilliqa"}

