[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "z2"
version.workspace = true

# This is a bit dodgy and should really be a top-level member of the workspace, but
# it's not big enough yet - we should promote it if it ever gets large enough
# - rrw 2023-02-22
[lib]
name = "z2lib"
path = "src/lib.rs"
test = false

[[bin]]
name = "z2"
path = "src/bin/z2.rs"
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "1.6.3", default-features = false, features = ["consensus", "hyper", "provider-http", "provider-ws", "pubsub", "rlp", "serde", "signer-local"] }
anyhow = "1.0.101"
arc-swap = "1.8.2"
base64 = "0.22.1"
bitvec = "1.0.1"
clap = { version = "4.5.58", features = ["derive"] }
clap-verbosity-flag = "3.0.4"
cliclack = "0.3.8"
colored = "3.1.1"
env_logger = "0.11.9"
eth_trie = { git = "https://github.com/Zilliqa/eth-trie.rs.git", branch = "zilliqa-revm" }
ethabi = "18.0.0"
futures = "0.3.31"
indicatif = "0.18.4"
itertools = "0.14.0"
k256 = "0.13.4"
libp2p = { version = "0.56.0", features = ["identify"] }
log = "0.4.29"
parking_lot = "0.12.5"
primitive-types = "0.14.0"
prost = "0.14.3"
rand = "0.8.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = [
    "json",
    "default-tls",
    "http2",
    "charset",
], default-features = false }
rs-leveldb = { version = "0.1.5", default-features = false }
rustls = "0.23.31"
scopeguard = "1.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_yaml = "0.9.34"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
tempfile = "3.25.0"
tera = "1.20.1"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = [
    "macros",
    "rt-multi-thread",
    "sync",
    "io-std",
    "io-util",
    "process",
    "fs",
] }
toml = { version = "1.0.1", features = ["preserve_order"] }
tracing = "0.1.44"
zilliqa = { path = "../zilliqa" }
zilliqa-rs = "0.3.2"

[build-dependencies]
prost-build = "0.14.3"
