[package]
name = "zilliqa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zilliqa"
path = "src/lib.rs"

[[bin]]
name = "zilliqa"
path = "src/bin/zilliqa.rs"

[features]
# Enable tests which assert contract bytecode is correct and reproducible. Enabled in CI.
test_contract_bytecode = []
# Enable fake implementation of `ResponseChannel`, so tests can construct response channels.
fake_response_channel = []
# Enable fake implementation of `std::time::SystemTime` for deterministic tests.
fake_time = []

[build-dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
vergen = { version = "8.3.2", features = ["git", "git2"] }

[dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "consensus",
    "eips",
    "json-abi",
    "dyn-abi",
    "k256",
    "rlp",
    "rpc-types",
    "rpc-types-trace",
    "serde",
    "sol-types",
] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
bitvec = { version = "1.0.1", features = ["serde"] }
bs58 = "0.5.1"
bytes = "1.10.0"
clap = { version = "4.5.40", features = ["derive"] }
eth_trie = { path = "../eth-trie.rs" }
ethabi = "18.0.0"
futures = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.3.1"
hyper = "1.6.0"
itertools = "0.14.0"
jsonrpsee = { version = "0.24.8", features = [
    "jsonrpsee-http-client",
    "server",
] }
k256 = { version = "0.13.4", features = ["serde", "pem"] }
libp2p = { version = "0.56.0", features = [
    "cbor",
    "dns",
    "gossipsub",
    "macros",
    "tokio",
    "request-response",
    "kad",
    "identify",
    "serde",
    "autonat",
    "tcp",
    "noise",
    "yamux",
] }
lz4 = "1.28"
once_cell = "1.21.3"
opentelemetry = { version = "0.28.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.28.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28.0", default-features = true, features = [
    "grpc-tonic",
    "metrics",
] }
paste = "1.0.15"
prost = "0.14.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
revm = { version = "19.6.0", features = [
    "optional_eip3607",
    "optional_no_base_fee",
] }
revm-inspectors = { version = "0.16.0", features = ["js-tracer"] }
rusqlite = { version = "0.37.0", features = ["bundled", "trace"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_bytes = "0.11.17"
serde_json = { version = "1.0.140", features = [
    "raw_value",
    "arbitrary_precision",
] }
sha2 = "0.10.8"
sha3 = "0.10.8"
tempfile = "3.19.1"
time = { version = "0.3.41", features = ["formatting", "macros"] }
tokio = { version = "1.46.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-stream = "0.1.17"
toml = "0.8.23"
tower = "0.4.13"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
cbor4ii = { version = "1.0.0", features = ["serde1"] }
scilla-parser = "2.0.0"
scopeguard = "1.2.0"
blsful = { git = "https://github.com/JamesHinshelwood/agora-blsful", branch = "update-blstrs" }
bech32 = "0.11.0"
cfg-if = "1.0.1"
serde_repr = "0.1.19"
thiserror = "2.0.12"
lru-mem = "0.3.0"
opentelemetry-semantic-conventions = { version = "0.28.0", features = [
    "semconv_experimental",
] }
semver = "1.0.23"
foundry-compilers = { version = "0.14.1", features = ["svm-solc"] }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", version = "1.3.12" }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
dashmap = "6.1.0"

[dev-dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "network",
    "rand",
    "signers",
    "signer-local",
] }
async-trait = "0.1.88"
bincode_v1 = { package = "bincode", version = "1.3.3" }
criterion = "0.5.1"
ethers = { version = "2.0.14", default-features = false, features = ["legacy"] }
fs_extra = "1.3.0"
indicatif = "0.17.11"
pprof = { version = "0.15.0", default-features = false, features = [
    "criterion",
    "flamegraph",
] }
primitive-types = { version = "0.12.2" }
ureq = "3.0.12"
zilliqa = { path = ".", default-features = false, features = [
    "fake_response_channel",
    "fake_time",
] }
zilliqa-macros = { path = "../zilliqa-macros" }

[[bench]]
name = "it"
harness = false
