[package]
name = "zilliqa"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "zilliqa"
path = "src/lib.rs"

[[bin]]
name = "zilliqa"
path = "src/bin/zilliqa.rs"

[features]
# Enable tests which assert contract bytecode is correct and reproducible. Enabled in CI.
test_contract_bytecode = []
# Enable fake implementation of `ResponseChannel`, so tests can construct response channels.
fake_response_channel = []
# Enable fake implementation of `std::time::SystemTime` for deterministic tests.
fake_time = []

[build-dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
vergen-git2 = { version = "1.0.2", features = [] }

[dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "consensus",
    "eips",
    "json-abi",
    "dyn-abi",
    "k256",
    "rlp",
    "rpc-types",
    "rpc-types-trace",
    "serde",
    "sol-types",
] }
anyhow = { version = "1.0.99", features = ["backtrace"] }
async-trait = "0.1.89"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
bitvec = { version = "1.0.1", features = ["serde"] }
bytes = "1.10.1"
clap = { version = "4.5.47", features = ["derive"] }
ethabi = "18.0.0"
futures = "0.3.31"
hex = { version = "0.4.3", features = ["serde"] }
http = "1.3.1"
hyper = "1.7.0"
itertools = "0.14.0"
jsonrpsee = { version = "0.25.1", features = [
    "jsonrpsee-http-client",
    "server",
] }
k256 = { version = "0.13.4", features = ["serde", "pem"] }
libp2p = { version = "0.56.0", features = [
    "cbor",
    "dns",
    "gossipsub",
    "macros",
    "tokio",
    "request-response",
    "kad",
    "identify",
    "serde",
    "autonat",
    "tcp",
    "noise",
    "yamux",
] }
lz4 = "1.28"
once_cell = "1.21.3"
opentelemetry = { version = "0.30.0", features = ["metrics"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30.0", default-features = true, features = [
    "grpc-tonic",
    "metrics",
] }
paste = "1.0.15"
prost = "0.14.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
revm = { version = "19.6.0", features = [
    "optional_eip3607",
    "optional_no_base_fee",
] }
revm-inspectors = { version = "0.16.0", features = ["js-tracer"] }
rusqlite = { version = "0.37.0", features = ["bundled", "trace"] }
serde = { version = "1.0.226", features = ["derive", "rc"] }
serde_bytes = "0.11.17"
serde_json = { version = "1.0.143", features = [
    "raw_value",
    "arbitrary_precision",
] }
sha2 = "0.10.8"
sha3 = "0.10.8"
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = [
    "macros",
    "rt-multi-thread",
    "signal",
    "sync",
] }
tokio-stream = "0.1.17"
toml = "0.9.5"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
cbor4ii = { version = "1.1.1", features = ["serde1"] }
scilla-parser = "2.0.0"
scopeguard = "1.2.0"
blsful = { git = "https://github.com/Zilliqa/agora-blsful", branch = "update-blstrs" }
bech32 = "0.11.0"
cfg-if = "1.0.3"
serde_repr = "0.1.20"
thiserror = "2.0.16"
lru-mem = "0.3.0"
opentelemetry-semantic-conventions = { version = "0.30.0", features = [
    "semconv_experimental",
] }
semver = "1.0.23"
foundry-compilers = { version = "0.14.1", features = ["svm-solc"] }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", version = "1.4.1" }
parking_lot = { version = "0.12.4", features = ["send_guard"] }
dashmap = "6.1.0"
sled = { version = "0.34.7", features = ["no_logs"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.31.0"
rocksdb = { version = "0.24.0", default-features = false, features = [
    "bindgen-runtime",
    "snappy",
] }
zip = { version = "5.1.1", default-features = false, features = ["zstd"] }
eth_trie = { git = "https://github.com/Zilliqa/eth-trie.rs.git", branch = "zilliqa" }
arc-swap = "1.7.1"

[dev-dependencies]
alloy = { version = "0.12.4", default-features = false, features = [
    "network",
    "rand",
    "signers",
    "signer-local",
] }
async-trait = "0.1.88"
criterion = "0.5.1"
ethers = { version = "2.0.14" }
fs_extra = "1.3.0"
indicatif = "0.18.0"
pprof = { version = "0.15.0", default-features = false, features = [
    "criterion",
    "flamegraph",
] }
primitive-types = { version = "0.12.2" }
zilliqa = { path = ".", default-features = false, features = [
    "fake_response_channel",
    "fake_time",
] }
zilliqa-macros = { path = "../zilliqa-macros" }

[[bench]]
name = "it"
harness = false
